--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,6 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GlobalDefaultGameMode=/Game/GameCore/Player/NewGm.NewGm_C
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/Nikita_Chist2")
